--- a/client/src/style/_layouts.scss
+++ b/client/src/style/_layouts.scss
@@ -269,6 +269,7 @@ main {
         margin-top: 3rem;
         display: flex;
         flex-direction: column;
+        gap: 1rem;
 
         @include desktop {
             display: grid;
