--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -484,6 +484,7 @@ main {
   margin-top: 3rem;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 @media (min-width: 1200px) {
   #users-watchlists section {
@@ -1999,13 +2000,18 @@ form .submit-container {
 }
 .user-watchlist-card .action-container {
   position: absolute;
-  top: 50%;
-  right: 1rem;
-  transform: translateY(-50%);
+  bottom: 0.88rem;
+  right: 0.88rem;
   display: flex;
   flex-direction: row;
   gap: 1rem;
   align-items: center;
+}
+@media (min-width: 1200px) {
+  .user-watchlist-card .action-container {
+    bottom: 50%;
+    transform: translateY(50%);
+  }
 }
 .user-watchlist-card .action-container .watchlist-link {
   color: #E6ECF5;
